test/code/test_coma.out

Parse error: syntax error, unexpected ',' in {{CWD}}/test/code/test_coma.php on line 3
