test/code/test_coma.php
<?php

$a = 10, $b = 100;
var_dump($a);
var_dump($b);
